Control panel placed above footer on smaller screens, not fixed

--- a/main.css
+++ b/main.css
@@ -851,6 +851,9 @@ section#visualization .multiplyAnimate{
   #visResult{
     padding-left: 10px;
   }
+  .control-panel{
+    position: relative;
+  }
 }
 @media only screen and (max-width: 320px){
   section#calculator #display{
